test/Common/LinkerScriptParsing/Errors/Sections/OutputSectionPrologue/OutSectConstraints/Inputs/script1.t
SECTIONS {
  FOO : ONLY_IF_RX { *(*foo*) }
}